Start workin on the portfolio api
